# akleao-research-v0

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  STATUS-2025-12-10.md  akleao.db  docker-compose.prod.yml  docker-compose.yml  dump.rdb  example.py  main.py  openapi.json  pyproject.toml  simage.db  start.sh  test_doc.md
.github/workflows/: deploy.yml
api/: app.py  auth.py  database.py  schemas.py  storage.py
api/middleware/: auth.py
api/routers/: auth.py  findings.py  jobs.py  messages.py  notifications.py  projects.py  query.py  resources.py  test_resources.py  threads.py  websocket.py  workspaces.py
api/services/: email.py
api/tasks/: __init__.py  conversation.py
api/utils/: extraction.py  file_types.py  hashing.py
docs/: DEPLOYMENT.md  STREAMING_ARCHITECTURE_PROPOSAL.md  rag-pipeline-improvements.md  v4-agent-improvements.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
nginx/: nginx.conf
rag/: __init__.py  agent.py  chunker.py  data_analysis.py  embeddings.py  ingest.py  llm.py  pipeline.py  retriever.py  tool_registry.py  vectorstore.py
rag/tools/: __init__.py  base.py  data.py  executor.py  findings.py  registry.py  resources.py  search.py  vision.py
scripts/: deploy.sh  pull-prod-data.sh  seed-from-prod.sh  start-services.sh  stop-services.sh
uploads/2fbf2527-7ca9-4fd5-b982-e6d68a8e2c2c/: Arctic Reflections 2025 #1.csv  Arctic Reflections 2025 #2.csv  ICE BUOY TBE (1).xlsx  SIMB3 2025C (1).csv  SIMB3 2025H.csv  T-X21W546471A-5sets-BOM(2025-08-26).xls  (+3 more)
(+49 files in other folders)
